<resources>
    <string name="app_name">Sora</string>
    <string name="splash_image">Splash Image</string>
    <string name="sora">Sora</string>
    <string name="welcome">Welcome</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="welcome_intro">Share your story with other people</string>
    <string name="photo">Photo</string>
    <string name="name">Name</string>
    <string name="description">Story description</string>
    <string name="created_date">Created Date</string>
    <string name="close_btn">Close</string>
    <string name="settings_menu">Settings</string>
    <string name="logout_menu">Logout</string>
    <string name="img_preview">Image Preview</string>
    <string name="post">Post</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="new_post">New post</string>
    <string name="choose_pic">Choose a picture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="take_picture">Take Picture</string>
    <string name="language">Language</string>
    <string name="current_language">English</string>
    <string name="language_setting">Language Setting</string>
    <string name="success_alert_title">Success</string>
    <string name="login_alert_message">Login success</string>
    <string name="register_alert_message">Register success</string>
    <string name="continue_alert_button">Continue</string>
    <string name="failed_response_alert_title">Failed</string>
    <string name="failed_response_alert_message">Failed to get response</string>
    <string name="login_failed_alert_title">Login failed</string>
    <string name="login_failed_alert_message">Wrong email or password</string>
    <string name="register_failed_alert_title">Registration failed</string>
    <string name="register_failed_alert_message">Email already in use</string>
    <string name="back_alert_button">Back</string>
    <string name="story_loaded">Story list loaded</string>
    <string name="error_story_not_loaded">Cannot load story list</string>
    <string name="logout_alert_title">Logout</string>
    <string name="logout_alert_message">Are you sure want to logout?</string>
    <string name="logout_alert_positive_button">Yes</string>
    <string name="logout_alert_negative_button">Cancel</string>
    <string name="permission_alert_title">Permission required</string>
    <string name="permission_alert_message">This app requires camera access to take a photo</string>
    <string name="error_email_empty">Insert your email</string>
    <string name="error_password_empty">Insert your password</string>
    <string name="error_invalid_email_format">Invalid email format</string>
    <string name="error_wrong_password_format">Minimum 8 character</string>
    <string name="error_camera_failed">Failed to display camera</string>
    <string name="error_camera_capture_failed">Failed to take a picture</string>
    <string name="error_name_empty">Insert your name</string>
    <string name="post_story_success_alert_message">Story uploaded</string>
    <string name="post_story_failed_alert_message">Story upload failed</string>
    <string name="empty_picture_alert_title">Picture still empty</string>
    <string name="empty_picture_alert_message">Please insert a picture</string>
    <string name="empty_description_alert_title">Story description still empty</string>
    <string name="empty_description_alert_message">Please insert story description</string>
</resources>