<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    card_view:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_date"
            style="@style/date"
            tools:text="@string/created_date"/>

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/photo"
            android:layout_below="@id/tv_date"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tv_name"
            style="@style/name"
            tools:text="@string/name"
            android:layout_below="@+id/iv_photo"/>

        <TextView
            android:id="@+id/tv_description"
            style="@style/description"
            tools:text="@string/description"
            android:layout_below="@+id/tv_name"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>