<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SettingsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_language_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardCornerRadius="10dp"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_language"
                style="@style/menuName"
                android:text="@string/language"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tv_current_language"
                style="@style/menuStatus"
                android:text="@string/current_language"
                android:layout_toStartOf="@id/iv_arrow"
                tools:ignore="RelativeOverlap"/>

            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right"
                card_view:tint="@color/navy"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/language_setting"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="10dp"
        card_view:cardCornerRadius="10dp"
        card_view:layout_constraintTop_toBottomOf="@id/cv_language_setting"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_logout"
                style="@style/menuName"
                android:textColor="@color/red"
                android:text="@string/logout_menu"
                android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/iv_logout_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_baseline_logout"
                card_view:tint="@color/red"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/logout_menu"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>